--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <main>
             <select id="region-select">
                 <option value="">Wybierz województwo</option>
+                <option value="całapolska">CałaPolska</option>
                 <option value="dolnośląskie">Dolnośląskie</option>
                 <option value="kujawsko-pomorskie">Kujawsko-Pomorskie</option>
                 <option value="lubelskie">Lubelskie</option>
@@ -43,7 +44,7 @@
                 <input id="message-input" type="text" placeholder="Wpisz wiadomość..." autocomplete="off">
                 <button type="submit">Wyślij</button>
             </form>
-            <button id="discord-button" onclick="window.open('https://discord.com', '_blank')">Dołącz do nas na Discordzie</button>
+            <button id="discord-button" onclick="window.open('https://discord.com/invite/mbQcmFzAjs', '_blank')">Dołącz do nas na Discordzie</button>
         </main>
     </div>
     <script src="/socket.io/socket.io.js"></script>
