--- a/index.html
+++ b/index.html
@@ -1,77 +1,1 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>czatpogaduszki.pl - Anonimowy Czat z Obcymi</title>
-    <meta name="description" content="Czatpogaduszki.pl to miejsce, gdzie możesz anonimowo porozmawiać z losowo wybraną osobą z różnych regionów Polski. Dołącz do rozmowy już teraz!">
-    <meta name="keywords" content="czat, anonimowy czat, rozmawiaj z obcymi, czat online, czat z nieznajomymi, pogawędki, rozmowy">
-    <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body class="expanded">
-    <div id="chat-container" class="expanded">
-        <header>
-            <div id="top-bar">
-                <img src="logo.png" alt="czatpogaduszki.pl" id="logo">
-                <div id="online-users"><i class="fas fa-user"></i> <span id="online-count">0</span> </div>
-            </div>
-        </header>
-        <main>
-            <p id="intro-text">Wystarczy, że klikniesz „Połącz z obcym”, aby rozpocząć anonimową rozmowę z losowo wybraną osobą. Możesz również wybrać województwo, z którego chcesz znaleźć rozmówcę. Jeśli rozmowa Cię nie zaciekawi, zawsze możesz przejść do kolejnej. Życzymy udanych pogawędek! :)</p>
-            <select id="region-select">
-                <option value="">Wybierz województwo</option>
-                <option value="całapolska">Cała Polska</option>
-                <option value="dolnośląskie">Dolnośląskie</option>
-                <option value="kujawsko-pomorskie">Kujawsko-Pomorskie</option>
-                <option value="lubelskie">Lubelskie</option>
-                <option value="lubuskie">Lubuskie</option>
-                <option value="łódzkie">Łódzkie</option>
-                <option value="małopolskie">Małopolskie</option>
-                <option value="mazowieckie">Mazowieckie</option>
-                <option value="opolskie">Opolskie</option>
-                <option value="podkarpackie">Podkarpackie</option>
-                <option value="podlaskie">Podlaskie</option>
-                <option value="pomorskie">Pomorskie</option>
-                <option value="śląskie">Śląskie</option>
-                <option value="świętokrzyskie">Świętokrzyskie</option>
-                <option value="warmińsko-mazurskie">Warmińsko-Mazurskie</option>
-                <option value="wielkopolskie">Wielkopolskie</option>
-                <option value="zachodniopomorskie">Zachodniopomorskie</option>
-            </select>
-            <button id="connect-button">Połącz z obcym</button>
-            <button id="disconnect-button" style="display: none;">Rozłącz</button>
-            <button id="new-partner-button" style="display: none;">Połącz z nowym obcym</button>
-            <div id="messages-container">
-                <div id="messages"></div>
-                <div id="typing" style="display: none;">Obcy pisze...</div>
-            </div>
-            <form id="message-form" style="display: none;">
-                <input id="message-input" type="text" placeholder="Wpisz wiadomość..." autocomplete="off">
-                <button type="submit">Wyślij</button>
-            </form>
-            <button id="discord-button" onclick="window.open('https://discord.com/invite/mbQcmFzAjs', '_blank')">Dołącz do nas na Discordzie</button>
-            <div id="announcements">
-                <h2>Ogłoszenia</h2>
-                <div class="announcement" id="announcement-1">
-                    <p>Ogłoszenie 1: Szukam chłopa, który gadał ze mną od około 1 do około 6.30, póki mi neta nie wywaliło. Rozmowa zaczynała się od tego ile masz wiosen i powiedziałeś, że 420. Natomiast kończyła się na zrobieniu kawy i przysiadach, które miałam zrobić, potem mnie wywaliło. Po drodze gadaliśmy o wybaczaniu, twoich kotach i moich, często dochodziło do walk między nami oraz mówiłeś, że starałeś się dostać do szkoły komików( co nie wiem czy nie było żartem). Jeżeli chcesz to odezwij się.</p>
-                </div>
-                <div class="announcement" id="announcement-2" style="display: none;">
-                    <p>Ogłoszenie 2: Pozdrawiam Wikę z Torunia, przyszłą panią adwokat 😉 Pisaliśmy prawie że do białego rana. Jeśli nadal jesteś chętna na tą kiedyś tam wycieczkę do Krakowa to odezwij się w jakiś sposób</p>
-                </div>
-                <div class="announcement" id="announcement-3" style="display: none;">
-                    <p>Ogłoszenie 3: Pozdrowienia dla dziewczyny co jeździ mazdą 6 i lubi nocne spacery. Pozdrawia Grzegorz</p>
-                </div>
-                <div id="announcement-controls">
-                    <button id="prev-announcement">Poprzednie</button>
-                    <button id="next-announcement">Następne</button>
-                </div>
-            </div>
-        </main>
-    </div>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="script.js"></script>
-</body>
-</html>
+<!doctypehtml><html lang=pl><meta charset=UTF-8><meta content="width=device-width,initial-scale=1"name=viewport><title>czatpogaduszki.pl - Anonimowy Czat z Obcymi</title><meta content="Czatpogaduszki.pl to miejsce, gdzie możesz anonimowo porozmawiać z losowo wybraną osobą z różnych regionów Polski. Dołącz do rozmowy już teraz!"name=description><meta content="czat, anonimowy czat, rozmawiaj z obcymi, czat online, czat z nieznajomymi, pogawędki, rozmowy"name=keywords><meta content="index, follow"name=robots><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css rel=stylesheet><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css rel=stylesheet crossorigin=anonymous integrity=sha384-SZXxX4whJ79/GFf6XP4Xdu9f6p38lfik4zeb7owU3Kj44xYO8CR1aP8qKfvgpD5y><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"rel=stylesheet><link href=styles.css rel=stylesheet><meta content=nosniff http-equiv=X-Content-Type-Options><meta content=DENY http-equiv=X-Frame-Options><meta content="1; mode=block"http-equiv=X-XSS-Protection><meta content="max-age=31536000; includeSubDomains"http-equiv=Strict-Transport-Security><div id=chat-container><header><div id=top-bar><img alt=czatpogaduszki.pl id=logo src=logo.png><div id=online-users class=user-status><i class="fa-user fas"></i> <span id=online-count>0</span></div></div></header><main><p id=intro-text>Wystarczy, że klikniesz „Połącz z obcym”, aby rozpocząć anonimową rozmowę z losowo wybraną osobą. Możesz również wybrać województwo, z którego chcesz znaleźć rozmówcę. Jeśli rozmowa Cię nie zaciekawi, zawsze możesz przejść do kolejnej. Życzymy udanych pogawędek! :)</p><select id=region-select><option value="">Wybierz województwo<option value=całapolska>Cała Polska<option value=dolnośląskie>Dolnośląskie<option value=kujawsko-pomorskie>Kujawsko-Pomorskie<option value=lubelskie>Lubelskie<option value=lubuskie>Lubuskie<option value=łódzkie>Łódzkie<option value=małopolskie>Małopolskie<option value=mazowieckie>Mazowieckie<option value=opolskie>Opolskie<option value=podkarpackie>Podkarpackie<option value=podlaskie>Podlaskie<option value=pomorskie>Pomorskie<option value=śląskie>Śląskie<option value=świętokrzyskie>Świętokrzyskie<option value=warmińsko-mazurskie>Warmińsko-Mazurskie<option value=wielkopolskie>Wielkopolskie<option value=zachodniopomorskie>Zachodniopomorskie</select> <button id=connect-button>Połącz z obcym</button> <button id=disconnect-button style=display:none>Rozłącz</button> <button id=new-partner-button style=display:none>Połącz z nowym obcym</button><div id=messages-container><div id=messages></div><div id=typing style=display:none>Obcy pisze...</div></div><form id=message-form style=display:none><input autocomplete=off id=message-input placeholder="Wpisz wiadomość..."> <button type=submit>Wyślij</button></form></main><footer><div id=footer-content><p>© 2024 czatpogaduszki.pl - Wszystkie prawa zastrzeżone<div id=social-icons><a aria-label=Discord href=https://discord.com/invite/mbQcmFzAjs target=_blank><i class="fab fa-discord"></i></a> <a aria-label=Facebook href=https://www.facebook.com/czatpogaduszkipl target=_blank><i class="fab fa-facebook"></i></a></div></div></footer></div><script src=/socket.io/socket.io.js></script><script src=script.js defer></script>
